--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.6.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-dates": "^21.8.0",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
@@ -20,6 +21,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-stripe-elements": "^6.1.2",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
